service-event-list: cleanup spacing and fix color

--- a/client/components/service-event-list/index.css
+++ b/client/components/service-event-list/index.css
@@ -1,7 +1,18 @@
 
-.ServiceEventList {}
+.ServiceEventList h2 {
+  margin-bottom: 5px;
+}
+
+.ServiceEventList ul {
+  margin: 0;
+}
 .ServiceEventListItem {}
-.ServiceEventListItem-message {}
+.ServiceEventListItem-message {
+  color: #54585E;
+  font-size: 16px;
+}
 .ServiceEventListItem-timestamp {
   padding-left: 10px;
+  font-size: 16px;
+  color: #b7bdc4;
 }
